force-app/main/default/objects/Department__c/fields/Default_Routing_Department__c.field-meta.xml
<CustomField>
    <fullName>Default_Routing_Department__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Routing Department</label>
    <type>Checkbox</type>
</CustomField>