force-app/main/default/objects/Department__c/fields/Department_Type__c.field-meta.xml
<CustomField>
    <fullName>Department_Type__c</fullName>
    <label>Department Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>OPD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>