force-app/main/default/objects/Department__c/fields/Hospital_Branch__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital Branch</label>
    <referenceTo>Hospital_Branch__c</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <type>Lookup</type>
</CustomField>