force-app/main/default/objects/Department__c/fields/Is_Medical_Department__c.field-meta.xml
<CustomField>
    <fullName>Is_Medical_Department__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Medical Department</label>
    <type>Checkbox</type>
</CustomField>